# go-wecom

./: .dockerignore  .editorconfig  .env.example  .gitignore  .golangci.yml  BUILD.bazel  Dockerfile  Makefile  README.md  TODO.md  WORKSPACE  deps.bzl  go.mod  go.sum
wecom/: BUILD.bazel  agent_push_event.go  bot_ws.go  client.go  client_agent.go  client_agent_more.go  client_agent_test.go  client_auth.go  client_contacts_async.go  client_contacts_async_test.go  client_contacts_dept.go  client_contacts_dept_test.go  client_contacts_export.go  client_contacts_export_test.go  client_contacts_link.go  client_contacts_link_test.go  client_contacts_more.go  client_contacts_tag.go  client_contacts_tag_test.go  client_contacts_user.go  client_contacts_user_test.go  client_external_contact.go  client_external_contact_more.go  client_external_contact_test.go  client_externalcontact.go  client_gen_account.go  client_gen_account_test.go  client_gen_advanced.go  client_gen_advanced_test.go  client_gen_agent.go  client_gen_agent_test.go  client_gen_approval.go  client_gen_approval_test.go  client_gen_auth.go  client_gen_auth_test.go  client_gen_checkin.go  client_gen_checkin_test.go  client_gen_contacts.go  client_gen_contacts_test.go  client_gen_corp_group.go  (+114 more)
wecom/auth/: BUILD.bazel  build_qr_url.go  build_suite_install_url.go  build_url.go  build_url_test.go
wecom/models/: token.go
wecom/testdata/cgi-bin/: get_api_domain_ip.response.json  get_launch_code.request.json  get_launch_code.response.json  getcallbackip.response.json  gettoken.response.json
wecom/testdata/cgi-bin/advanced_feature/: get_apply_id_list.request.json  get_apply_id_list.response.json  set_approval_detail.request.json
wecom/testdata/cgi-bin/agent/: get.request.json  get_workbench_template.request.json  list.request.json  set.request.json  set_workbench_data.request.json  set_workbench_template.request.json
wecom/testdata/cgi-bin/appchat/: create.request.json  get.response.json  send.request.json  update.request.json
wecom/testdata/cgi-bin/auth/: get_tfa_info.request.json  get_tfa_info.response.json  getuserdetail.request.json  getuserdetail.response.json
wecom/testdata/cgi-bin/batch/: openuserid_to_userid.request.json  openuserid_to_userid.response.json  replaceparty.request.json  syncuser.request.json
wecom/testdata/cgi-bin/chatdata/: async_program_task.request.json  async_program_task.response.json  check_debug_mode.response.json  get_auth_user_list.request.json  get_auth_user_list.response.json  open_debug_mode.request.json  set_hide_sensitiveinfo_config.request.json  set_log_level.request.json  set_public_key.request.json  set_receive_callback.request.json  sync_call_program.request.json  sync_call_program.response.json  upload_media.response.json
wecom/testdata/cgi-bin/checkin/: add_checkin_option.request.json  add_checkin_record.request.json  addcheckinuserface.request.json  getcheckin_daydata.request.json  getcheckin_daydata.response.json  getcheckin_monthdata.request.json  getcheckin_monthdata.response.json  getcheckindata.request.json  getcheckinoption.request.json  getcheckinoption.response.json  getcheckinschedulist.request.json  getcheckinschedulist.response.json  getcorpcheckinoption.response.json  punch_correction.request.json  setcheckinschedulist.request.json
wecom/testdata/cgi-bin/corp/: getapprovaldata.request.json  getapprovaldata.response.json  getopenapprovaldata.request.json  getopenapprovaldata.response.json
wecom/testdata/cgi-bin/corpgroup/: get_corp_shared_chain_list.request.json  getresult.response.json  (+7 more)
wecom/testdata/mmpaymkttransfers/: queryworkwxredpack.request.json  sendworkwxredpack.request.json
wecom/testdata/push/: AddSchedule.xml  BatchJobResult.xml  CancelAuth.xml  ChangeAuth.xml  ChangeContactCreateParty.xml  ChangeContactCreateUser.xml  ChangeContactDeleteParty.xml  ChangeContactDeleteUser.xml  ChangeContactUpdateParty.xml  ChangeContactUpdateTag.xml  ChangeContactUpdateUser.xml  ChangeExternalChatCreate.xml  ChangeExternalChatDismiss.xml  ChangeExternalChatUpdate.xml  ChangeExternalContactAddExternalContact.xml  ChangeExternalContactAddHalfExternalContact.xml  ChangeExternalContactDelExternalContact.xml  ChangeExternalContactDelFollowUser.xml  ChangeExternalContactEditExternalContact.xml  ChangeExternalContactTransferFail.xml  ChangeExternalTagCreate.xml  ChangeExternalTagDelete.xml  ChangeExternalTagUpdate.xml  Click.xml  CreateAuth.xml  DeleteCalendar.xml  DeleteSchedule.xml  EnterAgent.xml  Location.xml  MessageImage.xml  MessageLink.xml  MessageLocation.xml  MessageText.xml  MessageVideo.xml  MessageVoice.xml  ModifyCalendar.xml  ModifySchedule.xml  OpenApprovalChange.xml  ShareAgentChange.xml  Subscribe.xml  (+4 more)
wwcrypt/: BUILD.bazel  aes.go  aes_test.go  crypt.go  crypt_test.go  dec.go  message.go  step.go  utils.go
(+666 files in other folders)
