load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/wenerme/go-wecom
# gazelle:exclude **/*/ignored_*
# gazelle:exclude vendor
# gazelle:exclude third_party
# gazelle:proto disable
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)
