load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "wecom",
    srcs = [
        "client.go",
        "client_agent.go",
        "client_agent_more.go",
        "client_auth.go",
        "client_contacts_async.go",
        "client_contacts_dept.go",
        "client_contacts_export.go",
        "client_contacts_link.go",
        "client_contacts_more.go",
        "client_contacts_tag.go",
        "client_contacts_user.go",
        "client_external_contact.go",
        "client_external_contact_more.go",
        "client_message_audit.go",
        "client_message_audit_more.go",
        "client_misc.go",
        "client_schedule.go",
        "client_schedule_more.go",
        "client_service.go",
        "client_service_app_auth.go",
        "client_service_contacts.go",
        "client_service_contacts_more.go",
        "client_service_more.go",
        "client_user.go",
        "conf.go",
        "const.go",
        "ctx.go",
        "dto.go",
        "dto_common.go",
        "dto_external_contact.go",
        "dto_external_contact_push_event.go",
        "dto_message.go",
        "dto_push.go",
        "dto_push_event.go",
        "dto_push_event_more.go",
        "dto_schedule_push_event.go",
        "dto_service_push_event.go",
        "dto_suite.go",
        "message_audit.go",
        "options.go",
        "push_event.go",
        "request.go",
        "secret.go",
        "sign.go",
        "util.go",
        "webhook_send.go",
    ],
    importpath = "github.com/wenerme/go-wecom/wecom",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pkg_errors//:errors",
        "@com_github_wenerme_go_req//:go-req",
    ],
)

go_test(
    name = "wecom_test",
    srcs = [
        "client_agent_test.go",
        "client_contacts_async_test.go",
        "client_contacts_dept_test.go",
        "client_contacts_export_test.go",
        "client_contacts_link_test.go",
        "client_contacts_tag_test.go",
        "client_contacts_user_test.go",
        "client_external_contact_test.go",
        "client_message_audit_more_test.go",
        "client_message_audit_test.go",
        "client_mock_test.go",
        "client_schedule_test.go",
        "client_service_app_auth_test.go",
        "client_service_contacts_test.go",
        "client_test.go",
        "const_test.go",
        "ctx_test.go",
        "example_test.go",
        "push_event_test.go",
        "secret_test.go",
        "sign_test.go",
        "util_test.go",
        "webhook_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":wecom"],
    deps = [
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_chi_render//:render",
        "@com_github_go_playground_validator_v10//:validator",
        "@com_github_mitchellh_mapstructure//:mapstructure",
        "@com_github_pkg_errors//:errors",
        "@com_github_stretchr_testify//assert",
        "@com_github_wenerme_go_req//:go-req",
    ],
)
