load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "wwcrypt",
    srcs = [
        "aes.go",
        "crypt.go",
        "dec.go",
        "message.go",
        "step.go",
        "utils.go",
    ],
    importpath = "github.com/wenerme/go-wecom/wwcrypt",
    visibility = ["//visibility:public"],
)

go_test(
    name = "wwcrypt_test",
    srcs = [
        "aes_test.go",
        "crypt_test.go",
    ],
    embed = [":wwcrypt"],
    deps = [
        "//wecom",
        "@com_github_mitchellh_mapstructure//:mapstructure",
        "@com_github_sbzhu_weworkapi_golang//wxbizmsgcrypt",
        "@com_github_stretchr_testify//assert",
    ],
)
